// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a SVG correctly 1`] = `
<i
  className="svg"
>
  <svg
    viewBox="viewBox"
  >
    <use
      xlinkHref="symbol"
    />
  </svg>
</i>
`;

exports[`should render with the specified className 1`] = `
<i
  className="svg foo"
>
  <svg
    viewBox="viewBox"
  >
    <use
      xlinkHref="symbol"
    />
  </svg>
</i>
`;
